developing and stlying navabr

--- a/index.html
+++ b/index.html
@@ -9,11 +9,11 @@
 </head>
 <body>
     
-    <div class="nav bar">
+    <div class="nav-bar">
         <ul>
           <li>Home</li>
+          <li>About</li>
           <li>Services</li>
-          <li>Support</li>
           <li>Contact</li>
         </ul>
       </div>
