iserting elements and styling images in site

--- a/index.html
+++ b/index.html
@@ -17,6 +17,41 @@
           <li>Contact</li>
         </ul>
       </div>
+      <div class="wrapper">
+        <div class="image">
+          <div class="image-text description">Explore more on the responsive site</div>
+        </div>
+        <div class="introduction description"><b>Responsive Web design:</b> Is the approach that suggests that design and development should respond to the user's behavior and environment based on screen size, platform and orientation
+  </div>
+        <div class="services description">
+          <div class="service1">
+            <img src="images/r.png" />
+            <p>
+              At vero eos et accusamus et iusto odio dignissimos ducimus
+            </p>
+          </div>
+          <div class="service1">
+            <img src="images/r.png" />
+            <p>
+              At vero eos et accusamus et iusto odio dignissimos ducimus
+            </p>
+          </div>
+          <div class="service1">
+            <img src="images/r.png" />
+            <p>
+              At vero eos et accusamus et iusto odio dignissimos ducimus
+            </p>
+          </div>
+          <div class="service1">
+            <img src="images/r.png" />
+            <p>
+              At vero eos et accusamus et iusto odio dignissimos ducimus
+            </p>
+          </div>
+        </div>
+      </div>
+  
+  
       
   
 
