using @media to make the site responsive

--- a/index.html
+++ b/index.html
@@ -27,25 +27,25 @@
           <div class="service1">
             <img src="images/r.png" />
             <p>
-              At vero eos et accusamus et iusto odio dignissimos ducimus
+              Classic wallpapers for your interior decoration in all planned sizes.
             </p>
           </div>
           <div class="service1">
-            <img src="images/r.png" />
+            <img src="images/r3 (1).jpg" />
             <p>
-              At vero eos et accusamus et iusto odio dignissimos ducimus
+              Various magazines of your favourite weather conditions in different countries.
             </p>
           </div>
           <div class="service1">
-            <img src="images/r.png" />
+            <img src="images/r3 (2).png" />
             <p>
-              At vero eos et accusamus et iusto odio dignissimos ducimus
+              Explore on your best delivery services 24 hours.
             </p>
           </div>
           <div class="service1">
-            <img src="images/r.png" />
+            <img src="images/r4.png" />
             <p>
-              At vero eos et accusamus et iusto odio dignissimos ducimus
+              Your site Data Analyst on varoius records.
             </p>
           </div>
         </div>
