added a js enabled contact form which shows submitted data

--- a/index.html
+++ b/index.html
@@ -1,61 +1,73 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
-    <title>A responsive site</title>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="style.css">
+  <title>A responsive site</title>
 </head>
+
 <body>
-    
-    <div class="nav-bar">
-        <ul>
-          <li>Home</li>
-          <li>About</li>
-          <li>Services</li>
-          <li>Contact</li>
-        </ul>
-      </div>
-      <div class="wrapper">
-        <div class="image">
-          <div class="image-text description">Explore more on the responsive site</div>
-        </div>
-        <div class="introduction description"><b>Responsive Web design:</b> Is the approach that suggests that design and development should respond to the user's behavior and environment based on screen size, platform and orientation
+
+  <div class="nav-bar">
+    <ul>
+      <li>Home</li>
+      <li>About</li>
+      <li>Services</li>
+      <li>Contact</li>
+    </ul>
   </div>
-        <div class="services description">
-          <div class="service1">
-            <img src="images/r.png" />
-            <p>
-              Classic wallpapers for your interior decoration in all planned sizes.
-            </p>
-          </div>
-          <div class="service1">
-            <img src="images/r3 (1).jpg" />
-            <p>
-              Various magazines of your favourite weather conditions in different countries.
-            </p>
-          </div>
-          <div class="service1">
-            <img src="images/r3 (2).png" />
-            <p>
-              Explore on your best delivery services 24 hours.
-            </p>
-          </div>
-          <div class="service1">
-            <img src="images/r4.png" />
-            <p>
-              Your site Data Analyst on varoius records.
-            </p>
-          </div>
-        </div>
+
+
+
+  <div class="wrapper">
+    <div class="image">
+      <div class="image-text description">Explore more on the responsive site</div>
+    </div>
+    <div class="introduction description"><b>Responsive Web design:</b> Is the approach that suggests that design and
+      development should respond to the user's behavior and environment based on screen size, platform and orientation
+    </div>
+    <div class="services description">
+      <div class="service1">
+        <img src="images/r.png" />
+        <p>
+          Classic wallpapers for your interior decoration in all planned sizes.
+        </p>
       </div>
-  
-  
-      
-  
+      <div class="service1">
+        <img src="images/r3 (1).jpg" />
+        <p>
+          Various magazines of your favourite weather conditions in different countries.
+        </p>
+      </div>
+      <div class="service1">
+        <img src="images/r3 (2).png" />
+        <p>
+          Explore on your best delivery services 24 hours.
+        </p>
+      </div>
+      <div class="service1">
+        <img src="images/r4.png" />
+        <p>
+          Your site Data Analyst on varoius records.
+        </p>
+      </div>
+    </div>
+  </div>
+
+  <div class="contact">
+    <div>
+    <input id="username" type="text" placeholder="Username">
+    <input id="tele" type="text" placeholder="Telephone number">
+    <input id="submit" type="button" value="Submit">
+  </div>
+  </div>
 
 
 
+  <script src="script.js"></script>
 </body>
+
 </html>
